# momPanel

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.claude/skills/verify/: SKILL.md
.github/workflows/: appimage-preview.yml  ci.yml  release.yml
docs/: RELEASING.md
docs/superpowers/: mompanel-audit.workflow.js  mompanel-layout-audit.workflow.js  mompanel-mom-additions.workflow.js  mompanel-tiles.workflow.js
docs/superpowers/plans/: 2026-06-20-mompanel.md
docs/superpowers/reviews/: 2026-06-20-mom-additions.md  2026-06-20-security-feature-audit.md  2026-06-21-layout-jitter-audit.md
docs/superpowers/specs/: 2026-06-20-mompanel-design.md
src/: api.js  bridge.js  changelog.js  copy.js  escape.js  firstrun.js  gauge.js  help.js  index.html  info.js  layout.js  logo.js  main.js  mock.js  modal.js  opacity.js  scale.js  styles.css  theme.js  tiles.js  warn.html  warn.js  whatsnew.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  memwarn.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  config.rs  diag.rs  hostexec.rs  lib.rs  memwatch.rs  notifier.rs  shortcuts.rs
src-tauri/src/collectors/: cpu.rs  internet.rs  memory.rs  mod.rs  printers.rs  storage.rs  volume.rs  weather.rs  wifi.rs
src/preview/: companion.css  companion.js
src/tiles/: clock.js  cpu.js  index.js  internet.js  memory.js  printers.js  storage.js  volume.js  weather.js  wifi.js
tests/: changelog.test.mjs  gauge.test.mjs  opacity.test.mjs  theme.test.mjs
